syntax = "proto3";
import "google/api/annotations.proto";
package pb;

service Payment {
 rpc Pay             (PayRequest            ) returns (PayReply            ) {
  option (google.api.http) = {
   post: "/payment/pay"
   body: "*"
  };
 };
}

message PayRequest {
 int64  bill_num     = 1;
 int64  account_num  = 2;
 string pay_password = 3;
}

message PayReply {
 bool   status = 1;
 string msg    = 2;
}

